ui/ocb-connector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocb-connector
  labels:
    app: ocb-connector
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ocb-connector
  template:
    metadata:
      labels:
        app: ocb-connector
    spec:
      containers:
        - name: ocb-connector
          image: ghcr.io/atlantidapa/ocb-connector:20240606
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "2000m"
              memory: "2000Mi"
            limits:
              cpu: "2500m"
              memory: "3000Mi"
          volumeMounts:
            - name: logfile-vol
              mountPath: /ocb-data
      volumes:
        - name: logfile-vol
          configMap:
            name: ocb-configmap
      imagePullSecrets:
         - name: ocb-dockerconfigjson-github-com
---

apiVersion: v1
kind: Service
metadata:
  name: ocb-connectorservice
spec:
  selector:
    app: ocb-connector
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080

---
